<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nikos.watermonitorapp.LineChartFragment" >

    <item
        android:id="@+id/action_reset"
        android:title="@string/resetChart"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_lines"
        android:title="@string/toggleLinesScattered"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_points"
        android:title="@string/togglePoints"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_cubic"
        android:title="@string/toggleCubicCurve"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_area"
        android:title="@string/toggleArea"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_point_color"
        android:title="@string/togglePointColor"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shape_circles"
        android:title="string/circleShape"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shape_square"
        android:title="@string/squareShape"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shape_diamond"
        android:title="@string/diamondShape"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_axes"
        android:title="@string/toggleAxes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_axes_names"
        android:title="@string/toggleAxesNames"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_labels"
        android:title="@string/toggleLabels"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_selection_mode"
        android:title="@string/ActionToggleSelectionMode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_toggle_touch_zoom"
        android:title="@string/toggleTouchZoom"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_zoom_both"
        android:title="@string/zoomXY"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_zoom_horizontal"
        android:title="@string/zoomX"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_zoom_vertical"
        android:title="@string/zoomY"
        app:showAsAction="never"/>

</menu>


